--- a/on_thi_kthp/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan.csproj
+++ b/on_thi_kthp/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan.csproj
@@ -52,10 +52,19 @@
     <Compile Include="frmMonHoc.Designer.cs">
       <DependentUpon>frmMonHoc.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQLMonHoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQLMonHoc.Designer.cs">
+      <DependentUpon>frmQLMonHoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMonHoc.resx">
       <DependentUpon>frmMonHoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQLMonHoc.resx">
+      <DependentUpon>frmQLMonHoc.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
