Lam lai bai thi thu

--- a/on_thi_kthp/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan.csproj
+++ b/on_thi_kthp/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan/QuanLyDangKyHocPhan.csproj
@@ -58,6 +58,12 @@
     <Compile Include="frmQLMonHoc.Designer.cs">
       <DependentUpon>frmQLMonHoc.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSinhVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSinhVien.Designer.cs">
+      <DependentUpon>frmSinhVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmMonHoc.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmQLMonHoc.resx">
       <DependentUpon>frmQLMonHoc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSinhVien.resx">
+      <DependentUpon>frmSinhVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
